0.7/_sources/api/generated/deepchecks.tabular.checks.data_integrity.StringMismatch.rst.txt

StringMismatch
==============



.. currentmodule:: deepchecks.tabular.checks.data_integrity

.. autoclass:: StringMismatch
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   StringMismatch.add_condition
   
   
   StringMismatch.add_condition_no_variants
   
   
   StringMismatch.add_condition_not_more_variants_than
   
   
   StringMismatch.add_condition_ratio_variants_not_greater_than
   
   
   StringMismatch.clean_conditions
   
   
   StringMismatch.conditions_decision
   
   
   StringMismatch.finalize_check_result
   
   
   StringMismatch.metadata
   
   
   StringMismatch.name
   
   
   StringMismatch.params
   
   
   StringMismatch.remove_condition
   
   
   StringMismatch.run
   
   
   StringMismatch.run_logic
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_string_mismatch_thumb.png
     :alt: StringMismatch

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_string_mismatch.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


