0.9/_sources/api/generated/deepchecks.tabular.checks.data_integrity.StringMismatch.rst.txt

StringMismatch
==============



.. currentmodule:: deepchecks.tabular.checks.data_integrity

.. autoclass:: StringMismatch
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   StringMismatch.add_condition
   
   
   StringMismatch.add_condition_no_variants
   
   
   StringMismatch.add_condition_number_variants_less_or_equal
   
   
   StringMismatch.add_condition_ratio_variants_less_or_equal
   
   
   StringMismatch.clean_conditions
   
   
   StringMismatch.conditions_decision
   
   
   StringMismatch.config
   
   
   StringMismatch.from_config
   
   
   StringMismatch.from_json
   
   
   StringMismatch.metadata
   
   
   StringMismatch.name
   
   
   StringMismatch.params
   
   
   StringMismatch.remove_condition
   
   
   StringMismatch.run
   
   
   StringMismatch.run_logic
   
   
   StringMismatch.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_string_mismatch_thumb.png
     :alt: StringMismatch

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_string_mismatch.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


